--- a/doc/setup.ipynb
+++ b/doc/setup.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Installing TensorFlow\n",
-    "1. install NVIDIA softwares required by Tensorflow 2.1 following the instructions at <a href=\"https://www.tensorflow.org/install/gpu#software_requirements" target=\"_blank\">this link</a> before installing tensorflow-gpu\n",
+    "1. install NVIDIA softwares required by Tensorflow 2.1 following the instructions at <a href=\"https://www.tensorflow.org/install/gpu#software_requirements\" target=\"_blank\">this link</a> before installing tensorflow-gpu\n",
     "    * NVIDIA GPU drivers - CUDA 10.1 requires 418.x or higher\n",
     "    * CUDA Toolkit — TensorFlow supports CUDA 10.1 (TensorFlow >= 2.1.0)\n",
     "    * cuDNN SDK (>= 7.6)\n",
