add few descriptions

--- a/sociality_classification/sociality_classification.ipynb
+++ b/sociality_classification/sociality_classification.ipynb
@@ -160,6 +160,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Building Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -249,6 +256,13 @@
     "model = LSTMmodel(embedding_size=WORD_VEC_SIZE, vocab_size=TEXT_VOCAB_SIZE, output_size=LABEL_VOCAB_SIZE, hidden_size=HIDDEN_SIZE, num_layers=NUM_LAYERS, dropout=DROPOUT)\n",
     "model.to(device)\n",
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Optimization and Testing"
    ]
   },
   {
