Fix internal links

--- a/default_prediction_of_credit_card_clients/default_prediction.ipynb
+++ b/default_prediction_of_credit_card_clients/default_prediction.ipynb
@@ -4,38 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSCI 573 - Feature and Model Selection\n",
-    "\n",
-    "# Lab 4: A mini project: Putting it all together"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Table of contents\n",
-    "0. [Submission instructions](#si)\n",
+    "\n",
     "1. [Understanding the problem](#1)\n",
     "2. [Data splitting](#2)\n",
-    "3. [EDA](#3)\n",
-    "4. (optional) [Feature engineering](#4)\n",
+    "3. [EDA](#EDA)\n",
+    "4. [Feature engineering](#4)\n",
     "5. [Preprocessing and transformations](#5)\n",
     "6. [Baseline model](#6)\n",
     "7. [Linear models](#7)\n",
     "8. [Different classifiers](#8)\n",
-    "9. (optional) [Feature selection](#9)\n",
+    "9. [Feature selection](#9)\n",
     "10. [Hyperparameter optimization](#10)\n",
     "11. [Interpretation and feature importances](#11)\n",
     "12. [Results on the test set](#12)\n",
-    "13. [Summary of the results](#13)\n",
-    "14. (optional) [Your takeaway from the course](#14)"
+    "13. [Summary of the results](#13)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Description <a name=\"1\"></a>\n",
+    "## Project Description <a id=\"1\"></a>\n",
     "<hr>\n",
     "\n",
     "The project is about a classification problem of predicting whether a credit card client will default or not, using [Default of Credit Card Clients Dataset](https://www.kaggle.com/uciml/default-of-credit-card-clients-dataset). In this data set, there are 30,000 examples and 24 features, and the goal is to estimate whether a person will default (fail to pay) their credit card bills; this column is labeled \"default.payment.next.month\" in the data. The rest of the columns can be used as features. (Reference [the associated research paper](https://www.sciencedirect.com/science/article/pii/S0957417407006719)) "
@@ -112,6 +102,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data splitting <a id=\"2\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -137,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EDA and Report <a name=\"3\"></a>"
+    "## EDA <a id=\"3\"></a>"
    ]
   },
   {
@@ -770,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature engineering <a name=\"4\"></a>\n",
+    "### <a id='4'>Feature engineering</a>\n",
     "<hr>"
    ]
   },
@@ -3537,7 +3534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prediction on the test set <a name=\"12\"></a>\n",
+    "### Prediction on the test set <a id=\"12\"></a>\n",
     "<hr>\n",
     "\n",
     "Try your best performing model on the test data and report test scores. "
