Fix reference typos

--- a/default_prediction_of_credit_card_clients/default_prediction.ipynb
+++ b/default_prediction_of_credit_card_clients/default_prediction.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "1. [Understanding the problem](#1)\n",
     "2. [Data splitting](#2)\n",
-    "3. [EDA](#EDA)\n",
+    "3. [EDA](#3)\n",
     "4. [Feature engineering](#4)\n",
     "5. [Preprocessing and transformations](#5)\n",
     "6. [Baseline model](#6)\n",
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='4'>Feature engineering</a>\n",
+    "## Feature engineering <a id='4'></a>\n",
     "<hr>"
    ]
   },
@@ -801,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing and transformations <a name=\"5\"></a>\n",
+    "## Preprocessing and transformations <a id=\"5\"></a>\n",
     "<hr>"
    ]
   },
@@ -891,7 +891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Baseline model <a name=\"6\"></a>\n",
+    "## Baseline model <a id=\"6\"></a>\n",
     "<hr>\n",
     "\n",
     "Try `scikit-learn`'s baseline model and report results."
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear models <a name=\"7\"></a>\n",
+    "## Linear models <a id=\"7\"></a>\n",
     "<hr>\n",
     "\n",
     "Use logistic regression and carry out hyperparameter tuning. Report validation scores along with standard deviation. "
@@ -1378,7 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Non-linear classifiers <a name=\"8\"></a>\n",
+    "## Non-linear classifiers <a id=\"8\"></a>\n",
     "<hr>"
    ]
   },
@@ -1560,7 +1560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature selection <a name=\"9\"></a>\n",
+    "## Feature selection <a id=\"9\"></a>\n",
     "<hr>\n",
     "\n",
     "Select relevant features using `RFECV`, forward selection or L1 regularization."
@@ -1778,7 +1778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hyperparameter optimization <a name=\"10\"></a>\n",
+    "## Hyperparameter optimization <a id=\"10\"></a>\n",
     "<hr>\n",
     "\n",
     "Optimize hyperparameters for the models I tried above and summarize the results. (Further work: try Bayesian optimization methods. [scikit-optimize](https://github.com/scikit-optimize/scikit-optimize))"
@@ -2682,7 +2682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpretation and feature importances <a name=\"1\"></a>\n",
+    "## Interpretation and feature importances <a id=\"11\"></a>\n",
     "<hr>\n",
     "\n",
     "Explain the best model and the important features in various perspectives using `eli5` and `shap`."
@@ -3534,7 +3534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prediction on the test set <a id=\"12\"></a>\n",
+    "## Results on the test set <a id=\"12\"></a>\n",
     "<hr>\n",
     "\n",
     "Try your best performing model on the test data and report test scores. "
@@ -3870,7 +3870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary of important results <a name=\"13\"></a>\n",
+    "## Summary of the important results <a id=\"13\"></a>\n",
     "<hr>\n"
    ]
   },
