Update the work

--- a/default_prediction_of_credit_card_clients/default_prediction.ipynb
+++ b/default_prediction_of_credit_card_clients/default_prediction.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of contents\n",
+    "## Procedure\n",
     "\n",
-    "1. [Understanding the problem](#1)\n",
+    "1. [Project Description](#1)\n",
     "2. [Data splitting](#2)\n",
     "3. [EDA](#3)\n",
     "4. [Feature engineering](#4)\n",
